fixed z-index overlap.

--- a/app/templates/src/docs/scss/_component-view.scss
+++ b/app/templates/src/docs/scss/_component-view.scss
@@ -14,7 +14,7 @@
       top: -25px;
       bottom: -25px;
       left: -10px;
-      z-index: 300;
+      z-index: 99;
       background: #fff;
       width: 100%;
       width: 10px;
